[project]
name = "pesu-auth"
version = "0.1.0"
description = "A simple API to authenticate PESU credentials using PESU Academy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aditeya Baral", email = "aditeya.baral@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flasgger>=0.9.7.1",
    "flask>=3.1.1",
    "gh-md-to-html>=1.21.3",
    "lxml-html-clean>=0.4.2",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "requests-html>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:The 'strip_cdata' option of HTMLParser.*:DeprecationWarning"
]
markers = [
    "secret_required: marks tests that require secrets to run"
]
